--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
     width: 22px;
     height: 22px;
     margin: 0;
-    background: url("/download_493013.svg");
+    background: url("download_493013.svg");
 }
 
 .repository__answer-search{
